fix(recommendations): MC-344 Change locale failures from 400s to 404s.
